welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: unclosed character literal
	if (hour<7 && hour>20) {return 'true'}else{return 'false'}
                                            ^parotTrouble:2: error: unclosed character literal
	if (hour<7 && hour>20) {return 'true'}else{return 'false'}
                                                                ^parotTrouble:1: error: Missing closing brace `}' assumed here
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
^parotTrouble:3: error: Missing closing brace `}' assumed here
}
^